--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
+
 }
 
 body {
@@ -130,4 +131,10 @@ li {
 
 .nav-item {
   margin-top: 1rem;
+}
+
+.card {
+  margin: 20px;
+  padding: 10px;
+  text-align: center;
 }
