--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,12 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap");
-
 * {
   box-sizing: border-box;
 }
 
-#root,
-html,
-body {
+#root, html, body {
   height: 100%;
   margin: 0;
   padding: 0;
-
 }
 
 body {
@@ -18,9 +14,7 @@ body {
   font-size: 16px;
   line-height: 1.5;
   color: black;
-
 }
-
 
 .App {
   margin: 0 auto;
@@ -50,8 +44,7 @@ body {
   color: fushia;
 }
 
-input,
-textarea {
+input, textarea {
   margin-top: 32px;
   padding: 0.5rem;
   font-size: 16px;
@@ -63,8 +56,7 @@ textarea {
 
 input:focus {
   border-color: #007eff;
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075),
-    0 0 0 3px rgba(0, 126, 255, 0.1);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 0 3px rgba(0, 126, 255, 0.1);
   outline: none;
 }
 
@@ -82,8 +74,6 @@ label {
   color: red;
   margin-top: 0.25rem;
 }
-
-
 
 Button {
   max-width: 150px;
@@ -121,7 +111,6 @@ button.outline {
   align-items: center;
   padding: 2rem;
   text-decoration: none;
-
 }
 
 h1 {
