--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,12 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap");
+
 * {
   box-sizing: border-box;
 }
 
-#root, html, body {
+#root,
+html,
+body {
   height: 100%;
   margin: 0;
   padding: 0;
@@ -18,14 +21,18 @@ body {
 
 .App {
   margin: 0 auto;
-  width: 100%;
+  width: 50%;
   display: flex;
   justify-content: space-evenly;
   border-radius: 0 0 7px 7px;
   background-color: #007bff;
 }
 
-.Nav-link {
+.nav-link {
+  color: #fff;
+}
+
+.navbar-brand {
   color: #fff;
 }
 
@@ -44,7 +51,8 @@ body {
   color: fushia;
 }
 
-input, textarea {
+input,
+textarea {
   margin-top: 32px;
   padding: 0.5rem;
   font-size: 16px;
