--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,9 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap");
-
 * {
   box-sizing: border-box;
 }
 
-#root,
-html,
-body {
+#root, html, body {
   height: 100%;
   margin: 0;
   padding: 0;
@@ -51,8 +48,7 @@ body {
   color: fushia;
 }
 
-input,
-textarea {
+input, textarea {
   margin-top: 32px;
   padding: 0.5rem;
   font-size: 16px;
@@ -138,8 +134,13 @@ li {
   margin-top: 1rem;
 }
 
+.row {
+  background-color: black;
+}
+
 .card {
   margin: 20px;
   padding: 10px;
   text-align: center;
+  color: #007eff;
 }
