added  styling for font

--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,12 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap");
-
 * {
   box-sizing: border-box;
 }
 
-#root,
-html,
-body {
+#root {
   height: 100%;
   margin: 0;
   padding: 0;
-}
-
-body {
   font-family: "Open Sans", sans-serif;
   font-size: 16px;
   line-height: 1.5;
@@ -27,8 +21,6 @@ body {
   border-radius: 0 0 7px 7px;
   background-color: #007bff;
 }
-
-
 
 .nav-link {
   color: #fff;
@@ -53,8 +45,7 @@ body {
   color: fushia;
 }
 
-input,
-textarea {
+input, textarea {
   margin-top: 32px;
   padding: 0.5rem;
   font-size: 16px;
@@ -99,7 +90,6 @@ Button {
   outline: none;
   -webkit-appearance: none;
 }
-
 
 Button:disabled {
   opacity: 0.5;
