--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap");
+
 * {
   box-sizing: border-box;
 }
@@ -45,7 +46,8 @@
   color: fushia;
 }
 
-input, textarea {
+input,
+textarea {
   margin-top: 32px;
   padding: 0.5rem;
   font-size: 16px;
@@ -133,6 +135,7 @@ li {
 
 .row {
   background-color: black;
+  border-radius: 0 0 7px 7px;
 }
 
 .card {
