--- a/src/App.css
+++ b/src/App.css
@@ -144,3 +144,11 @@ li {
   text-align: center;
   color: #007eff;
 }
+
+#jokeCard {
+  background: rgb(24,26,27)
+}
+
+.app {
+  background: rgb(24,26,27);
+}
