removed dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -145,10 +145,10 @@ li {
   color: #007eff;
 }
 
-#jokeCard {
+/* #jokeCard {
   background: rgb(24,26,27)
 }
 
 .app {
   background: rgb(24,26,27);
-}
+} */
